portfolio-section and container and hover

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/main.css"
-</head>
+    <link rel="stylesheet" href="./css/main.css" </head>
+
 <body>
     <div class="navbar">
         <div class="logo">
@@ -14,15 +15,67 @@
             </a>
         </div>
         <div class="list">
-             <ul>
+            <ul>
                 <li><a href="#">services</a></li>
-                <li><a href="#">potfolio</a></li>
+                <li><a href="#">portfolio</a></li>
                 <li><a href="#">about</a></li>
                 <li><a href="#">team</a></li>
                 <li><a href="#">contact</a></li>
-             </ul>
+            </ul>
+        </div>
+    </div>
+    <div class="portfolio">
+        <div class="container">
+            <h2>portfolio</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <div class="portfolio-items">
+                <div class="portfolio-item">
+                    <img src="./img/potfolio/1.jpg" />
+                    <div class="item-content">
+                          <h3>Threads</h3>
+                          <span>Illustration</span>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="./img/potfolio/2.jpg" />
+                    <div class="item-content">
+                          <h3>Explore</h3>
+                          <span>Graphic Design</span>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img  src="./img/potfolio/3.jpg"/>
+                    <div class="item-content">
+                          <h3>Finish</h3>
+                         <span>Identity</span>
+                     </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="./img/potfolio/4.jpg" />
+                    <div class="item-content">
+                           <h3>Lines</h3>
+                           <span>Branding</span>
+                     </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="./img/potfolio/5.jpg" />
+                    <div class="item-content">
+                          <h3>Southwest</h3>
+                          <span>Website Design</span>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="./img/potfolio/6.jpg" />
+                    <div class="item-content">
+                          <h3>Threads</h3>
+                          <span>Illustration</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
+
 </body>
+
 </html>
